--- a/styles.css
+++ b/styles.css
@@ -568,7 +568,7 @@ body {
 /* Common Profile Picture Styles */
 .creator-pic,
 .instagram-creator-pic,
-.youtube-creator-pic {
+youtube-creator-pic {
     width: 80px;
     height: 80px;
     border-radius: 50%;
